# SimpleImageViewer

./: .gitignore  CMakeLists.txt
ImageIO/: BioImage.cpp  BioImage.h  BioImage_.cpp  BioImage_.h  CMakeLists.txt  Histogram.cpp  Histogram.h
ImageIO/Tiff/: CMakeLists.txt  Common.h  TiffReader.cpp  TiffReader.h  TiffWriter.cpp  TiffWriter.h
ImageIOTest/: CMakeLists.txt  main.cpp
Viewer2D/: Anisotropy.cpp  Anisotropy.h  AnisotropyDialog.qml  BioImageManager.cpp  BioImageManager.h  BioImageProvider.cpp  BioImageProvider.h  CMakeLists.txt  ColorTable.cpp  ColorTable.h  ControlSlider.qml  ImageManager.cpp  ImageManager.h  ImageScrollArea.qml  LayerModel.cpp  LayerModel.h  ThresholdSlider.qml  main.cpp  main.qml  qml.qrc
Viewer2D/colorMapGenerator/: colorScale.py  cppCode.txt  printCppCode.py
